// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ConstellationField — snapshot per colorMode renders three-person fixture in mode=dark 1`] = `
<View
  accessibilityRole="summary"
  style={
    [
      {
        "alignSelf": "center",
        "position": "relative",
      },
      {
        "height": 366,
        "width": 360,
      },
      undefined,
    ]
  }
  testID="field"
>
  <RNSVGSvgView
    bbHeight={366}
    bbWidth={360}
    focusable={false}
    height={366}
    pointerEvents="none"
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "flex": 0,
          "height": 366,
          "width": 360,
        },
      ]
    }
    testID="field-svg"
    width={360}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGRadialGradient
          cx="50%"
          cy="50%"
          fx="50%"
          fy="50%"
          gradient={
            [
              0,
              620720976,
              1,
              16741200,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="cg-fieldglow"
          rx="50%"
          ry="50%"
        />
      </RNSVGDefs>
      <RNSVGCircle
        cx={180}
        cy={150}
        fill={
          {
            "brushRef": "cg-fieldglow",
            "type": 1,
          }
        }
        propList={
          [
            "fill",
          ]
        }
        r={172}
      />
      <RNSVGCircle
        cx={180}
        cy={150}
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeOpacity",
            "strokeDasharray",
          ]
        }
        r={142}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeDasharray={
          [
            "2",
            "4",
          ]
        }
        strokeOpacity={0.08}
        strokeWidth={0.5}
      />
      <RNSVGCircle
        cx={180}
        cy={150}
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeOpacity",
            "strokeDasharray",
          ]
        }
        r={82}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeDasharray={
          [
            "2",
            "4",
          ]
        }
        strokeOpacity={0.06}
        strokeWidth={0.5}
      />
      <RNSVGLine
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        propList={
          [
            "stroke",
            "strokeWidth",
          ]
        }
        stroke={
          {
            "payload": 788493136,
            "type": 0,
          }
        }
        strokeWidth={0.5}
        x1={180}
        x2={65.6846467004541}
        y1={150}
        y2={84.00000000000001}
      />
      <RNSVGLine
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        propList={
          [
            "stroke",
            "strokeWidth",
          ]
        }
        stroke={
          {
            "payload": 787654168,
            "type": 0,
          }
        }
        strokeWidth={0.5}
        x1={180}
        x2={294.3153532995459}
        y1={150}
        y2={84.00000000000001}
      />
      <RNSVGLine
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        propList={
          [
            "stroke",
            "strokeWidth",
          ]
        }
        stroke={
          {
            "payload": 779839436,
            "type": 0,
          }
        }
        strokeWidth={0.5}
        x1={180}
        x2={180}
        y1={150}
        y2={282}
      />
      <RNSVGCircle
        cx={180}
        cy={150}
        fill={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
          ]
        }
        r={3}
      />
      <RNSVGCircle
        cx={180}
        cy={150}
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={0.5}
        testID="field-pulse"
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    pointerEvents="none"
    style={
      {
        "left": 180,
        "position": "absolute",
        "top": 160,
        "transform": [
          {
            "translateX": -16,
          },
        ],
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        {
          "color": "#857F7A",
          "fontFamily": "JetBrainsMono_500Medium",
          "fontSize": 11,
          "fontWeight": "500",
          "letterSpacing": 1.7,
          "lineHeight": 11,
          "textTransform": "uppercase",
        }
      }
    >
      You
    </Text>
  </View>
  <View
    style={
      {
        "left": 35.684646700454095,
        "position": "absolute",
        "top": 54.000000000000014,
      }
    }
    testID="field-orb-mom"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
          },
          {
            "opacity": 0,
            "transform": [
              {
                "scale": 0.7,
              },
            ],
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Marian, In their usual range, blood pressure 122/78"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "height": 60,
              "width": 60,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              [
                {
                  "bottom": -16,
                  "left": -16,
                  "position": "absolute",
                  "right": -16,
                  "top": -16,
                },
                {
                  "opacity": 0.55,
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          >
            <RNSVGSvgView
              bbHeight="100%"
              bbWidth="100%"
              focusable={false}
              height="100%"
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": "100%",
                    "width": "100%",
                  },
                ]
              }
              width="100%"
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGDefs>
                  <RNSVGRadialGradient
                    cx="50%"
                    cy="50%"
                    fx="50%"
                    fy="50%"
                    gradient={
                      [
                        0,
                        1509913424,
                        1,
                        16741200,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={0}
                    name="cg-orb-halo"
                    rx="50%"
                    ry="50%"
                  />
                </RNSVGDefs>
                <RNSVGCircle
                  cx="50%"
                  cy="50%"
                  fill={
                    {
                      "brushRef": "cg-orb-halo",
                      "type": 1,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                  r="50%"
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            style={
              [
                {
                  "shadowColor": "#FF7350",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0.55,
                  "shadowRadius": 16,
                },
                {
                  "opacity": 1,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#FF735022",
                    "borderColor": "#FF735066",
                    "borderRadius": 28,
                    "borderWidth": 0.5,
                    "height": 56,
                    "justifyContent": "center",
                    "width": 56,
                  },
                  {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                ]
              }
            >
              <Text
                maxFontSizeMultiplier={1.3}
                style={
                  {
                    "color": "#FF7350",
                    "fontFamily": "InstrumentSerif_400Regular_Italic",
                    "fontSize": 25,
                    "lineHeight": 25,
                  }
                }
              >
                M
              </Text>
            </View>
          </View>
        </View>
        <View
          pointerEvents="none"
          style={
            {
              "alignItems": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 64,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "InstrumentSerif_400Regular",
                "fontSize": 14,
                "letterSpacing": -0.07,
                "lineHeight": 18,
              }
            }
          >
            Marian
          </Text>
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#B8B2AA",
                "fontFamily": "JetBrainsMono_500Medium",
                "fontSize": 11,
                "fontWeight": "500",
                "letterSpacing": 0.4,
                "lineHeight": 13,
                "marginTop": 1,
              }
            }
          >
            122/78
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "left": 264.3153532995459,
        "position": "absolute",
        "top": 54.000000000000014,
      }
    }
    testID="field-orb-dad"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
          },
          {
            "opacity": 0,
            "transform": [
              {
                "scale": 0.7,
              },
            ],
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Emeka, Needs attention, blood pressure 138/89"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "height": 60,
              "width": 60,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              [
                {
                  "bottom": -16,
                  "left": -16,
                  "position": "absolute",
                  "right": -16,
                  "top": -16,
                },
                {
                  "opacity": 0.55,
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          >
            <RNSVGSvgView
              bbHeight="100%"
              bbWidth="100%"
              focusable={false}
              height="100%"
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": "100%",
                    "width": "100%",
                  },
                ]
              }
              width="100%"
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGDefs>
                  <RNSVGRadialGradient
                    cx="50%"
                    cy="50%"
                    fx="50%"
                    fy="50%"
                    gradient={
                      [
                        0,
                        1509074456,
                        1,
                        15902232,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={0}
                    name="cg-orb-halo"
                    rx="50%"
                    ry="50%"
                  />
                </RNSVGDefs>
                <RNSVGCircle
                  cx="50%"
                  cy="50%"
                  fill={
                    {
                      "brushRef": "cg-orb-halo",
                      "type": 1,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                  r="50%"
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            style={
              [
                {
                  "shadowColor": "#F2A618",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0.55,
                  "shadowRadius": 16,
                },
                {
                  "opacity": 1,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#F2A61822",
                    "borderColor": "#F2A61866",
                    "borderRadius": 28,
                    "borderWidth": 0.5,
                    "height": 56,
                    "justifyContent": "center",
                    "width": 56,
                  },
                  {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                ]
              }
            >
              <Text
                maxFontSizeMultiplier={1.3}
                style={
                  {
                    "color": "#F2A618",
                    "fontFamily": "InstrumentSerif_400Regular_Italic",
                    "fontSize": 25,
                    "lineHeight": 25,
                  }
                }
              >
                E
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              {
                "backgroundColor": "#E8B54F",
                "borderColor": "#0A0908",
                "borderRadius": 99,
                "borderWidth": 1.5,
                "height": 8,
                "position": "absolute",
                "right": 2,
                "top": 2,
                "width": 8,
              }
            }
          />
        </View>
        <View
          pointerEvents="none"
          style={
            {
              "alignItems": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 64,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "InstrumentSerif_400Regular",
                "fontSize": 14,
                "letterSpacing": -0.07,
                "lineHeight": 18,
              }
            }
          >
            Emeka
          </Text>
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#B8B2AA",
                "fontFamily": "JetBrainsMono_500Medium",
                "fontSize": 11,
                "fontWeight": "500",
                "letterSpacing": 0.4,
                "lineHeight": 13,
                "marginTop": 1,
              }
            }
          >
            138/89
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "left": 150,
        "position": "absolute",
        "top": 252,
      }
    }
    testID="field-orb-aunt"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
          },
          {
            "opacity": 0,
            "transform": [
              {
                "scale": 0.7,
              },
            ],
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Joy, Sleeping, blood pressure 118/74"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "height": 60,
              "width": 60,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              [
                {
                  "bottom": -16,
                  "left": -16,
                  "position": "absolute",
                  "right": -16,
                  "top": -16,
                },
                {
                  "opacity": 0.25,
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          >
            <RNSVGSvgView
              bbHeight="100%"
              bbWidth="100%"
              focusable={false}
              height="100%"
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": "100%",
                    "width": "100%",
                  },
                ]
              }
              width="100%"
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGDefs>
                  <RNSVGRadialGradient
                    cx="50%"
                    cy="50%"
                    fx="50%"
                    fy="50%"
                    gradient={
                      [
                        0,
                        1501259724,
                        1,
                        8087500,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={0}
                    name="cg-orb-halo"
                    rx="50%"
                    ry="50%"
                  />
                </RNSVGDefs>
                <RNSVGCircle
                  cx="50%"
                  cy="50%"
                  fill={
                    {
                      "brushRef": "cg-orb-halo",
                      "type": 1,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                  r="50%"
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            style={
              [
                {
                  "shadowColor": "#7B67CC",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0.25,
                  "shadowRadius": 9,
                },
                {
                  "opacity": 0.65,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#7B67CC22",
                    "borderColor": "#7B67CC66",
                    "borderRadius": 28,
                    "borderWidth": 0.5,
                    "height": 56,
                    "justifyContent": "center",
                    "width": 56,
                  },
                  {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                ]
              }
            >
              <Text
                maxFontSizeMultiplier={1.3}
                style={
                  {
                    "color": "#7B67CC",
                    "fontFamily": "InstrumentSerif_400Regular_Italic",
                    "fontSize": 25,
                    "lineHeight": 25,
                  }
                }
              >
                J
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#0A0908",
                "borderColor": "#7B67CC80",
                "borderRadius": 99,
                "borderWidth": 1,
                "height": 14,
                "justifyContent": "center",
                "position": "absolute",
                "right": 2,
                "top": 2,
                "width": 14,
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                {
                  "color": "#B8B2AA",
                  "fontSize": 11,
                  "lineHeight": 13,
                }
              }
            >
              ☾
            </Text>
          </View>
        </View>
        <View
          pointerEvents="none"
          style={
            {
              "alignItems": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 64,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "InstrumentSerif_400Regular",
                "fontSize": 14,
                "letterSpacing": -0.07,
                "lineHeight": 18,
              }
            }
          >
            Joy
          </Text>
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#B8B2AA",
                "fontFamily": "JetBrainsMono_500Medium",
                "fontSize": 11,
                "fontWeight": "500",
                "letterSpacing": 0.4,
                "lineHeight": 13,
                "marginTop": 1,
              }
            }
          >
            118/74
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ConstellationField — snapshot per colorMode renders three-person fixture in mode=light 1`] = `
<View
  accessibilityRole="summary"
  style={
    [
      {
        "alignSelf": "center",
        "position": "relative",
      },
      {
        "height": 366,
        "width": 360,
      },
      undefined,
    ]
  }
  testID="field"
>
  <RNSVGSvgView
    bbHeight={366}
    bbWidth={360}
    focusable={false}
    height={366}
    pointerEvents="none"
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "flex": 0,
          "height": 366,
          "width": 360,
        },
      ]
    }
    testID="field-svg"
    width={360}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGRadialGradient
          cx="50%"
          cy="50%"
          fx="50%"
          fy="50%"
          gradient={
            [
              0,
              620720976,
              1,
              16741200,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="cg-fieldglow"
          rx="50%"
          ry="50%"
        />
      </RNSVGDefs>
      <RNSVGCircle
        cx={180}
        cy={150}
        fill={
          {
            "brushRef": "cg-fieldglow",
            "type": 1,
          }
        }
        propList={
          [
            "fill",
          ]
        }
        r={172}
      />
      <RNSVGCircle
        cx={180}
        cy={150}
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeOpacity",
            "strokeDasharray",
          ]
        }
        r={142}
        stroke={
          {
            "payload": 4279177756,
            "type": 0,
          }
        }
        strokeDasharray={
          [
            "2",
            "4",
          ]
        }
        strokeOpacity={0.08}
        strokeWidth={0.5}
      />
      <RNSVGCircle
        cx={180}
        cy={150}
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeOpacity",
            "strokeDasharray",
          ]
        }
        r={82}
        stroke={
          {
            "payload": 4279177756,
            "type": 0,
          }
        }
        strokeDasharray={
          [
            "2",
            "4",
          ]
        }
        strokeOpacity={0.06}
        strokeWidth={0.5}
      />
      <RNSVGLine
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        propList={
          [
            "stroke",
            "strokeWidth",
          ]
        }
        stroke={
          {
            "payload": 788493136,
            "type": 0,
          }
        }
        strokeWidth={0.5}
        x1={180}
        x2={65.6846467004541}
        y1={150}
        y2={84.00000000000001}
      />
      <RNSVGLine
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        propList={
          [
            "stroke",
            "strokeWidth",
          ]
        }
        stroke={
          {
            "payload": 787654168,
            "type": 0,
          }
        }
        strokeWidth={0.5}
        x1={180}
        x2={294.3153532995459}
        y1={150}
        y2={84.00000000000001}
      />
      <RNSVGLine
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        propList={
          [
            "stroke",
            "strokeWidth",
          ]
        }
        stroke={
          {
            "payload": 779839436,
            "type": 0,
          }
        }
        strokeWidth={0.5}
        x1={180}
        x2={180}
        y1={150}
        y2={282}
      />
      <RNSVGCircle
        cx={180}
        cy={150}
        fill={
          {
            "payload": 4279177756,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
          ]
        }
        r={3}
      />
      <RNSVGCircle
        cx={180}
        cy={150}
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4279177756,
            "type": 0,
          }
        }
        strokeWidth={0.5}
        testID="field-pulse"
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    pointerEvents="none"
    style={
      {
        "left": 180,
        "position": "absolute",
        "top": 160,
        "transform": [
          {
            "translateX": -16,
          },
        ],
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        {
          "color": "#5A6478",
          "fontFamily": "JetBrainsMono_500Medium",
          "fontSize": 11,
          "fontWeight": "500",
          "letterSpacing": 1.7,
          "lineHeight": 11,
          "textTransform": "uppercase",
        }
      }
    >
      You
    </Text>
  </View>
  <View
    style={
      {
        "left": 35.684646700454095,
        "position": "absolute",
        "top": 54.000000000000014,
      }
    }
    testID="field-orb-mom"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
          },
          {
            "opacity": 0,
            "transform": [
              {
                "scale": 0.7,
              },
            ],
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Marian, In their usual range, blood pressure 122/78"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "height": 60,
              "width": 60,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              [
                {
                  "bottom": -16,
                  "left": -16,
                  "position": "absolute",
                  "right": -16,
                  "top": -16,
                },
                {
                  "opacity": 0.55,
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          >
            <RNSVGSvgView
              bbHeight="100%"
              bbWidth="100%"
              focusable={false}
              height="100%"
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": "100%",
                    "width": "100%",
                  },
                ]
              }
              width="100%"
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGDefs>
                  <RNSVGRadialGradient
                    cx="50%"
                    cy="50%"
                    fx="50%"
                    fy="50%"
                    gradient={
                      [
                        0,
                        1509913424,
                        1,
                        16741200,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={0}
                    name="cg-orb-halo"
                    rx="50%"
                    ry="50%"
                  />
                </RNSVGDefs>
                <RNSVGCircle
                  cx="50%"
                  cy="50%"
                  fill={
                    {
                      "brushRef": "cg-orb-halo",
                      "type": 1,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                  r="50%"
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            style={
              [
                {
                  "shadowColor": "#FF7350",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0.55,
                  "shadowRadius": 16,
                },
                {
                  "opacity": 1,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#FF735022",
                    "borderColor": "#FF735066",
                    "borderRadius": 28,
                    "borderWidth": 0.5,
                    "height": 56,
                    "justifyContent": "center",
                    "width": 56,
                  },
                  {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                ]
              }
            >
              <Text
                maxFontSizeMultiplier={1.3}
                style={
                  {
                    "color": "#FF7350",
                    "fontFamily": "InstrumentSerif_400Regular_Italic",
                    "fontSize": 25,
                    "lineHeight": 25,
                  }
                }
              >
                M
              </Text>
            </View>
          </View>
        </View>
        <View
          pointerEvents="none"
          style={
            {
              "alignItems": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 64,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#0F121C",
                "fontFamily": "InstrumentSerif_400Regular",
                "fontSize": 14,
                "letterSpacing": -0.07,
                "lineHeight": 18,
              }
            }
          >
            Marian
          </Text>
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#2A3040",
                "fontFamily": "JetBrainsMono_500Medium",
                "fontSize": 11,
                "fontWeight": "500",
                "letterSpacing": 0.4,
                "lineHeight": 13,
                "marginTop": 1,
              }
            }
          >
            122/78
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "left": 264.3153532995459,
        "position": "absolute",
        "top": 54.000000000000014,
      }
    }
    testID="field-orb-dad"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
          },
          {
            "opacity": 0,
            "transform": [
              {
                "scale": 0.7,
              },
            ],
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Emeka, Needs attention, blood pressure 138/89"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "height": 60,
              "width": 60,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              [
                {
                  "bottom": -16,
                  "left": -16,
                  "position": "absolute",
                  "right": -16,
                  "top": -16,
                },
                {
                  "opacity": 0.55,
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          >
            <RNSVGSvgView
              bbHeight="100%"
              bbWidth="100%"
              focusable={false}
              height="100%"
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": "100%",
                    "width": "100%",
                  },
                ]
              }
              width="100%"
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGDefs>
                  <RNSVGRadialGradient
                    cx="50%"
                    cy="50%"
                    fx="50%"
                    fy="50%"
                    gradient={
                      [
                        0,
                        1509074456,
                        1,
                        15902232,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={0}
                    name="cg-orb-halo"
                    rx="50%"
                    ry="50%"
                  />
                </RNSVGDefs>
                <RNSVGCircle
                  cx="50%"
                  cy="50%"
                  fill={
                    {
                      "brushRef": "cg-orb-halo",
                      "type": 1,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                  r="50%"
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            style={
              [
                {
                  "shadowColor": "#F2A618",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0.55,
                  "shadowRadius": 16,
                },
                {
                  "opacity": 1,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#F2A61822",
                    "borderColor": "#F2A61866",
                    "borderRadius": 28,
                    "borderWidth": 0.5,
                    "height": 56,
                    "justifyContent": "center",
                    "width": 56,
                  },
                  {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                ]
              }
            >
              <Text
                maxFontSizeMultiplier={1.3}
                style={
                  {
                    "color": "#F2A618",
                    "fontFamily": "InstrumentSerif_400Regular_Italic",
                    "fontSize": 25,
                    "lineHeight": 25,
                  }
                }
              >
                E
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              {
                "backgroundColor": "#E8B54F",
                "borderColor": "#0A0908",
                "borderRadius": 99,
                "borderWidth": 1.5,
                "height": 8,
                "position": "absolute",
                "right": 2,
                "top": 2,
                "width": 8,
              }
            }
          />
        </View>
        <View
          pointerEvents="none"
          style={
            {
              "alignItems": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 64,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#0F121C",
                "fontFamily": "InstrumentSerif_400Regular",
                "fontSize": 14,
                "letterSpacing": -0.07,
                "lineHeight": 18,
              }
            }
          >
            Emeka
          </Text>
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#2A3040",
                "fontFamily": "JetBrainsMono_500Medium",
                "fontSize": 11,
                "fontWeight": "500",
                "letterSpacing": 0.4,
                "lineHeight": 13,
                "marginTop": 1,
              }
            }
          >
            138/89
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "left": 150,
        "position": "absolute",
        "top": 252,
      }
    }
    testID="field-orb-aunt"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
          },
          {
            "opacity": 0,
            "transform": [
              {
                "scale": 0.7,
              },
            ],
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Joy, Sleeping, blood pressure 118/74"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "height": 60,
              "width": 60,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              [
                {
                  "bottom": -16,
                  "left": -16,
                  "position": "absolute",
                  "right": -16,
                  "top": -16,
                },
                {
                  "opacity": 0.25,
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          >
            <RNSVGSvgView
              bbHeight="100%"
              bbWidth="100%"
              focusable={false}
              height="100%"
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": "100%",
                    "width": "100%",
                  },
                ]
              }
              width="100%"
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGDefs>
                  <RNSVGRadialGradient
                    cx="50%"
                    cy="50%"
                    fx="50%"
                    fy="50%"
                    gradient={
                      [
                        0,
                        1501259724,
                        1,
                        8087500,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={0}
                    name="cg-orb-halo"
                    rx="50%"
                    ry="50%"
                  />
                </RNSVGDefs>
                <RNSVGCircle
                  cx="50%"
                  cy="50%"
                  fill={
                    {
                      "brushRef": "cg-orb-halo",
                      "type": 1,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                  r="50%"
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            style={
              [
                {
                  "shadowColor": "#7B67CC",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0.25,
                  "shadowRadius": 9,
                },
                {
                  "opacity": 0.65,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#7B67CC22",
                    "borderColor": "#7B67CC66",
                    "borderRadius": 28,
                    "borderWidth": 0.5,
                    "height": 56,
                    "justifyContent": "center",
                    "width": 56,
                  },
                  {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                ]
              }
            >
              <Text
                maxFontSizeMultiplier={1.3}
                style={
                  {
                    "color": "#7B67CC",
                    "fontFamily": "InstrumentSerif_400Regular_Italic",
                    "fontSize": 25,
                    "lineHeight": 25,
                  }
                }
              >
                J
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#0A0908",
                "borderColor": "#7B67CC80",
                "borderRadius": 99,
                "borderWidth": 1,
                "height": 14,
                "justifyContent": "center",
                "position": "absolute",
                "right": 2,
                "top": 2,
                "width": 14,
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                {
                  "color": "#2A3040",
                  "fontSize": 11,
                  "lineHeight": 13,
                }
              }
            >
              ☾
            </Text>
          </View>
        </View>
        <View
          pointerEvents="none"
          style={
            {
              "alignItems": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 64,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#0F121C",
                "fontFamily": "InstrumentSerif_400Regular",
                "fontSize": 14,
                "letterSpacing": -0.07,
                "lineHeight": 18,
              }
            }
          >
            Joy
          </Text>
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              {
                "color": "#2A3040",
                "fontFamily": "JetBrainsMono_500Medium",
                "fontSize": 11,
                "fontWeight": "500",
                "letterSpacing": 0.4,
                "lineHeight": 13,
                "marginTop": 1,
              }
            }
          >
            118/74
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
